--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -5,7 +5,7 @@ author = {{cookiecutter.full_name}}
 author_email = {{cookiecutter.email}}
 description = {{cookiecutter.project_short_description}}
 long_description = file: README.rst
-url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
+url = https://github.com/{{cookiecutter.github_username}}/xontrib-{{cookiecutter.project_slug}}
 license = MIT
 classifiers =
     Programming Language :: Python :: 3
