--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -18,8 +18,11 @@ classifiers =
 
 [options]
 include_package_data = True
-packages = find:
+packages=xontrib
 python_requires = >=3.5
 
 install_requires =
     xonsh
+
+[options.package_data]
+xontrib = *.xsh
