--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,14 @@ license = "MIT"
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.1"
+pytest = ">=7.1.1"
 cookiecutter = "^1.7.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = [
+    "tests",
+]
