--- a/{{cookiecutter.project_repo_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_repo_name}}/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-{% raw %}name: Testing
+name: Testing
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
 #          - "3.9"
 #          - "3.10"
 #          - "3.11-dev"
-
+{% raw %}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -27,6 +27,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+{% endraw %}
 
     - name: Install xonsh shell
       run: pip install xonsh
@@ -34,4 +35,3 @@ jobs:
       run: pip install .
     - name: Test
       run: xonsh -c 'xontrib load {{cookiecutter.project_package_name}}'
-{% endraw %}
