--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+validate-pyproject = {extras = ["all"], version = "^0.7.2"}
+tomli = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.1.1"
