--- a/project-template/{{_copier_conf.project_repo_name}}/pyproject.toml
+++ b/project-template/{{_copier_conf.project_repo_name}}/pyproject.toml
@@ -63,7 +63,10 @@ xonsh = ">=0.11"
 
 {% if cookiecutter.package_manager == 'poetry' %}
 [tool.poetry.dev-dependencies]
-pytest = ">=6.0"
+pytest = ">=7.0"
+{% else %}
+[project.optional-dependencies]
+dev = ["pytest>=7.0"]
 {% endif %}
 
 {% if cookiecutter.package_manager == 'poetry' %}
