--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,11 @@ license = "MIT"
 python = "^3.7"
 validate-pyproject = {extras = ["all"], version = "^0.7.2"}
 tomli = "^2.0.1"
+copier = "6.*"
+cookiecutter = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.1.1"
-cookiecutter = "^1.7.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
