--- a/project-template/{{ project_repo_name }}/pyproject.toml
+++ b/project-template/{{ project_repo_name }}/pyproject.toml
@@ -1,14 +1,14 @@
-{% if _copier_conf.package_manager == 'poetry' %}
+{% if package_manager == 'poetry' %}
 [tool.poetry]
-name = "{{_copier_conf.project_repo_name}}"
-version = "{{_copier_conf.version}}"
-description = "{{_copier_conf.project_short_description}}"
-authors = ["{{_copier_conf.full_name}} <{{_copier_conf.email}}>"]
+name = "{{project_repo_name}}"
+version = "{{version}}"
+description = "{{project_short_description}}"
+authors = ["{{full_name}} <{{email}}>"]
 
 license = "MIT"
 readme = "README.md"
 
-repository = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}"
+repository = "https://github.com/{{github_username}}/{{project_repo_name}}"
 keywords = ['xontrib', 'xonsh']
 classifiers = [
     "Intended Audience :: Developers",
@@ -23,10 +23,10 @@ classifiers = [
 packages = [{ include = "xontrib" }]
 {% else %}
 [project]
-name = "{{_copier_conf.project_repo_name}}"
-version = "{{_copier_conf.version}}"
+name = "{{project_repo_name}}"
+version = "{{version}}"
 license = {file = "LICENSE"}
-description = "{{_copier_conf.project_short_description}}"
+description = "{{project_short_description}}"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -38,30 +38,30 @@ classifiers = [
 requires-python = ">=3.6"
 dependencies = ["xonsh"]
 [[project.authors]]
-name = "{{_copier_conf.full_name}}"
-email = "{{_copier_conf.email}}"
+name = "{{full_name}}"
+email = "{{email}}"
 [project.readme]
 file = "README.md"
 content-type = "text/markdown"
 {% endif %}
 
-{% if _copier_conf.package_manager == 'poetry' %}
+{% if package_manager == 'poetry' %}
 [tool.poetry.urls]
 {% else %}
 [project.urls]
 {% endif %}
-Homepage = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}"
-Documentation = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}/blob/master/README.md"
-Code = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}"
-"Issue tracker" = "https://github.com/{{_copier_conf.github_username}}/{{_copier_conf.project_repo_name}}/issues"
+Homepage = "https://github.com/{{github_username}}/{{project_repo_name}}"
+Documentation = "https://github.com/{{github_username}}/{{project_repo_name}}/blob/master/README.md"
+Code = "https://github.com/{{github_username}}/{{project_repo_name}}"
+"Issue tracker" = "https://github.com/{{github_username}}/{{project_repo_name}}/issues"
 
-{% if _copier_conf.package_manager == 'poetry' %}
+{% if package_manager == 'poetry' %}
 [tool.poetry.dependencies]
 python = ">=3.7"
 xonsh = ">=0.11"
 {% endif %}
 
-{% if _copier_conf.package_manager == 'poetry' %}
+{% if package_manager == 'poetry' %}
 [tool.poetry.dev-dependencies]
 pytest = ">=7.0"
 {% else %}
@@ -69,7 +69,7 @@ pytest = ">=7.0"
 dev = ["pytest>=7.0"]
 {% endif %}
 
-{% if _copier_conf.package_manager == 'poetry' %}
+{% if package_manager == 'poetry' %}
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
