--- a/project-template/{{ project_repo_name }}/.gitignore
+++ b/project-template/{{ project_repo_name }}/.gitignore
@@ -127,3 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# xontrib is an implicit namespace package. DO NOT add an __init__.py file to this directory.
+xontrib/__init__.py
