--- a/project-template/{{ project_repo_name }}/.github/workflows/release-drafter.yml
+++ b/project-template/{{ project_repo_name }}/.github/workflows/release-drafter.yml
@@ -31,4 +31,4 @@ jobs:
         #   config-name: my-config.yml
         #   disable-autolabeler: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
