--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,16 @@ build-backend = "setuptools.build_meta"
 [project]
 # PEP 621 project metadata
 # See https://www.python.org/dev/peps/pep-0621/
-name = "xontrib-cookiecutter"
+name = "xontrib-template"
 version = "0.2.0"
-description = "Cookiecutter template for Xontrib"
+description = "A copier template for Xontrib"
 authors = [
     { name = "Your Name", email = "you@example.com" },
 ]
 license = { text = "MIT" }
 requires-python = ">=3.8,<4.0"
 dependencies = [
-    "copier==6.*",
+    "copier>=7",
     "cookiecutter<2.0.0,>=1.7.3",
     "jinja2-time",
 ]
@@ -36,3 +36,7 @@ testpaths = [
 ]
 [tool.pdm]
 [tool.pdm.dev-dependencies]
+
+[tool.semantic_release]
+version_toml = "pyproject.toml:project.version"
+version_source = "tag"
