chore: pre-commit disable yaml checks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,4 +7,4 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: check-merge-conflict
-      - id: check-yaml
+#      - id: check-yaml
