--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dev = [
     "validate-pyproject[all]<1.0.0,>=0.7.2",
     "tomli<3.0.0,>=2.0.1",
     "xonsh>=0.12.5",
+    "pyyaml>=6.0.1"
 ]
 
 [tool.pytest.ini_options]
