--- a/copier.yml
+++ b/copier.yml
@@ -5,8 +5,10 @@ _min_copier_version: "9.0.0"
 _subdirectory: project-template
 _templates_suffix: "" # empty suffix will process all files
 _jinja_extensions:
-  - jinja2_time.TimeExtension
-  - cookiecutter.extensions.SlugifyExtension
+  - copier_templates_extensions.TemplateExtensionLoader
+  - extensions.py:CurrentYearExtension
+  - extensions.py:GitExtension
+  - extensions.py:SlugifyExtension
 
 ### question ###
 
@@ -15,10 +17,12 @@ full_name:
   help: Enter your full name. This will appear in the License generated and `pyproject.toml`'s authors field.
 
 email:
+  default: "{{ git_user_email }}"
   type: str
   help: Your E-mail address. This will appear in the License generated and `pyproject.toml`'s authors field.
 
 github_username:
+  default: "{{ git_user_name }}"
   type: str
   help: You Github username or organization name under which the projects lives.
 
